--- a/supported.html
+++ b/supported.html
@@ -283,7 +283,7 @@
                 </tr>
                 <tr>
                     <td>Xeno</td>
-                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><span class="green-dot">🟠<span class="status-badge">Partial</span></span></td>
                     <td><a href="https://discord.gg/getxeno" class="download-btn">Discord</a></td>
                 </tr>
                 <tr>
@@ -298,17 +298,17 @@
                 </tr>
                 <tr>
                     <td>Solara</td>
-                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><span class="green-dot">🟠<span class="status-badge">Partial</span></span></td>
                     <td><a href="https://getsolara.dev/" class="download-btn">Download</a></td>
                 </tr>
                 <tr>
                     <td>JJsploit</td>
-                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><span class="green-dot">🟠<span class="status-badge">Partial</span></span></td>
                     <td><a href="https://wearedevs.net/dInfo/JJSploit" class="download-btn">Download</a></td>
                 </tr>
                 <tr>
                     <td>Zorara</td>
-                    <td><span class="green-dot">🟢<span class="status-badge">Supported</span></span></td>
+                    <td><span class="green-dot">🟠<span class="status-badge">Partial</span></span></td>
                     <td><a href="https://wearedevs.net/d/Zorara" class="download-btn">Download</a></td>
                 </tr>
                 <tr>
@@ -378,7 +378,7 @@
 
         <!-- Status Legend -->
         <div class="executor-section" data-aos="fade-up">
-            <h2>Status Legend 📋</h2>
+            <h2>Status 📋</h2>
             <div class="legend-container">
                 <div class="legend-item">
                     <span class="green-dot">🟢<span class="status-badge">Supported</span></span>
