--- a/supported.html
+++ b/supported.html
@@ -414,8 +414,7 @@
             new Typed('.typed-title', {
                 strings: [
                     'Supported Executors 🚀',
-                    'Ultimate Tools ⚡',
-                    'Premium Solutions 💎'
+                    '⚡ Supported Executors ⚡'
                 ],
                 typeSpeed: 50,
                 backSpeed: 30,
